--- a/dvc.yaml
+++ b/dvc.yaml
@@ -58,7 +58,7 @@ stages:
         --max_length ${max_length}
         --dense_dim ${dense_dim}
         --dropout_rate ${dropout_rate}
-        --gradient_clip_value ${gradient_clip_value}
+        --grad_clip ${grad_clip}
         --model_dir data/06_models/vit
     deps:
       - logs/test_vit.log
