--- a/config/beit.yaml
+++ b/config/beit.yaml
@@ -1,8 +1,8 @@
+model_name: 'beit'
 batch_size: 64
 lr: 1e-5
 epochs: 50
-max_length: 512
+max_length: 256
 dense_dim: 128
 dropout_rate: 0.1
 gradient_clip_value: 1.0
-batch_norm: true
