--- a/.github/workflows/train.yml
+++ b/.github/workflows/train.yml
@@ -24,6 +24,7 @@ jobs:
         WANDB_API_KEY: ${{ secrets.WANDB_API_KEY }}
         repo_token: ${{ secrets.GITHUB_TOKEN }}
         ENABLE_PROGRESS_BAR: 0
+        TOKENIZERS_PARALLELISM: false
       options: --gpus all --shm-size=8G
 
     timeout-minutes: 1440  # Increased job runtime since ML is slow
