Trying to fix import errors

--- a/dvc.yaml
+++ b/dvc.yaml
@@ -366,7 +366,7 @@ stages:
     vars:
       - config/hateful_ofa.yaml
     cmd: >
-      python hateful_memes/models/hateful_ofa.py
+      python -m hateful_memes.models.hateful_ofa
       ${data}
       --fast_dev_run
       --selected-cols ${selected-cols}
