--- a/.github/workflows/train.yml
+++ b/.github/workflows/train.yml
@@ -85,6 +85,12 @@ jobs:
           dvc repro visual_bert
           dvc push --run-cache -d visual_bert
 
+      - name: Train VisualBERT with OD
+        # continue-on-error: true
+        run: |
+          dvc repro visual_bert_with_od
+          dvc push --run-cache -d visual_bert_with_od
+
       - name: Train ViT
         continue-on-error: true
         run: |
