--- a/dvc.yaml
+++ b/dvc.yaml
@@ -368,15 +368,15 @@ stages:
       - config/hateful_ofa.yaml
     cmd: >
       python -m hateful_memes.models.hateful_ofa
-      ${data}
-      --selected-cols ${selected-cols}
-      --bpe-dir ${bpe-dir}
-      --user-dir ${user-dir}
-      --restore-file ${restore-file}
-      --save-dir ${save-dir}
-      --task ${task} 
-      --arch ${arch}
-      --batch-size ${batch-size}
+      ${test.data}
+      --selected-cols ${test.selected-cols}
+      --bpe-dir ${test.bpe-dir}
+      --user-dir ${test.user-dir}
+      --restore-file ${test.restore-file}
+      --save-dir ${test.save-dir}
+      --task ${test.task} 
+      --arch ${test.arch}
+      --batch-size ${test.batch-size}
       --encoder-normalize-before
       --decoder-normalize-before
       --share-decoder-input-output-embed
@@ -384,34 +384,39 @@ stages:
       --layernorm-embedding 
       --patch-layernorm-embedding
       --code-layernorm-embedding 
-      --resnet-drop-path-rate ${resnet-drop-path-rate} 
-      --encoder-drop-path-rate ${encoder-drop-path-rate}
-      --decoder-drop-path-rate ${decoder-drop-path-rate}
-      --dropout ${dropout} 
-      --attention-dropout ${attention-dropout}
-      --weight-decay ${weight-decay} 
-      --optimizer ${optimizer} 
-      --adam-betas ${adam-betas}
-      --adam-eps ${adam-eps}
-      --clip-norm ${clip-norm}
-      --lr ${lr} 
-      --max-epoch ${max-epoch} 
-      --fixed-validation-seed ${fixed-validation-seed} 
-      --max-src-length ${max-src-length}
-      --max-tgt-length ${max-tgt-length}
+      --resnet-drop-path-rate ${test.resnet-drop-path-rate} 
+      --encoder-drop-path-rate ${test.encoder-drop-path-rate}
+      --decoder-drop-path-rate ${test.decoder-drop-path-rate}
+      --dropout ${test.dropout} 
+      --attention-dropout ${test.attention-dropout}
+      --weight-decay ${test.weight-decay} 
+      --optimizer ${test.optimizer} 
+      --adam-betas ${test.adam-betas}
+      --adam-eps ${test.adam-eps}
+      --clip-norm ${test.clip-norm}
+      --lr ${test.lr} 
+      --max-epoch ${test.max-epoch} 
+      --fixed-validation-seed ${test.fixed-validation-seed} 
+      --max-src-length ${test.max-src-length}
+      --max-tgt-length ${test.max-tgt-length}
       --find-unused-parameters 
       --add-type-embedding 
       --scale-attn 
       --scale-fc 
       --scale-heads 
       --disable-entangle 
-      --num-bins ${num-bins}
-      --patch-image-size ${patch-image-size}
-      --prompt-type ${prompt-type} 
+      --num-bins ${test.num-bins}
+      --patch-image-size ${test.patch-image-size}
+      --prompt-type ${test.prompt-type} 
       --add-caption 
       --fp16 
-      --fp16-scale-window ${fp16-scale-window}
-      --num-workers ${num-workers}
+      --fp16-scale-window ${test.fp16-scale-window}
+      --num-workers ${test.num-workers}
+      --ema-alpha ${test.ema-alpha}
+      --fast-dev-run ${test.fast-dev-run}
+      --monitor-metric ${test.monitor-metric}
+      --monitor-metric-mode ${test.monitor-metric-mode}
+      --stopping-patience ${test.stopping-patience}
       && echo "PASSED" > logs/test_hateful_ofa.log
     deps:
       - data/02_intermediate/hateful_memes_train_snli_ve.tsv
@@ -419,3 +424,64 @@ stages:
       - hateful_memes/models/hateful_ofa.py
     outs:
       - logs/test_hateful_ofa.log
+
+  train_hateful_ofa:
+    vars:
+      - config/hateful_ofa.yaml
+    cmd: >
+      python -m hateful_memes.models.hateful_ofa
+      ${train.data}
+      --selected-cols ${train.selected-cols}
+      --bpe-dir ${train.bpe-dir}
+      --user-dir ${train.user-dir}
+      --restore-file ${train.restore-file}
+      --save-dir ${train.save-dir}
+      --task ${train.task} 
+      --arch ${train.arch}
+      --batch-size ${train.batch-size}
+      --encoder-normalize-before
+      --decoder-normalize-before
+      --share-decoder-input-output-embed
+      --share-all-embeddings
+      --layernorm-embedding 
+      --patch-layernorm-embedding
+      --code-layernorm-embedding 
+      --resnet-drop-path-rate ${train.resnet-drop-path-rate} 
+      --encoder-drop-path-rate ${train.encoder-drop-path-rate}
+      --decoder-drop-path-rate ${train.decoder-drop-path-rate}
+      --dropout ${train.dropout} 
+      --attention-dropout ${train.attention-dropout}
+      --weight-decay ${train.weight-decay} 
+      --optimizer ${train.optimizer} 
+      --adam-betas ${train.adam-betas}
+      --adam-eps ${train.adam-eps}
+      --clip-norm ${train.clip-norm}
+      --lr ${train.lr} 
+      --max-epoch ${train.max-epoch} 
+      --fixed-validation-seed ${train.fixed-validation-seed} 
+      --max-src-length ${train.max-src-length}
+      --max-tgt-length ${train.max-tgt-length}
+      --find-unused-parameters 
+      --add-type-embedding 
+      --scale-attn 
+      --scale-fc 
+      --scale-heads 
+      --disable-entangle 
+      --num-bins ${train.num-bins}
+      --patch-image-size ${train.patch-image-size}
+      --prompt-type ${train.prompt-type} 
+      --add-caption 
+      --fp16 
+      --fp16-scale-window ${train.fp16-scale-window}
+      --num-workers ${train.num-workers}
+      --ema-alpha ${train.ema-alpha}
+      --fast-dev-run ${train.fast-dev-run}
+      --monitor-metric ${train.monitor-metric}
+      --monitor-metric-mode ${train.monitor-metric-mode}
+      --stopping-patience ${train.stopping-patience}
+    deps:
+      - data/02_intermediate/hateful_memes_train_snli_ve.tsv
+      - data/02_intermediate/hateful_memes_valid_snli_ve.tsv
+      - hateful_memes/models/hateful_ofa.py
+    outs:
+      - data/06_models/hateful_ofa
