--- a/.github/workflows/train.yml
+++ b/.github/workflows/train.yml
@@ -33,6 +33,8 @@ jobs:
       - name: work around permission issue
         run: git config --global --add safe.directory /__w/hateful_memes/hateful_memes
       - uses: actions/checkout@v2
+        with:
+          submodules: 'true'
 
       - name: Branch name
         run: echo running on branch ${GITHUB_REF##*/}
