--- a/requirements.txt
+++ b/requirements.txt
@@ -559,6 +559,7 @@ text-unidecode==1.3
 tifffile==2022.3.25
     # via scikit-image
 timm==0.5.4
+    # via -r requirements.in
 tokenizers==0.11.6
     # via transformers
 toml==0.10.2
@@ -571,6 +572,7 @@ torch==1.11.0+cu113
     # via
     #   -r requirements.in
     #   pytorch-lightning
+    #   timm
     #   torchaudio
     #   torchmetrics
     #   torchtext
@@ -584,7 +586,9 @@ torchmetrics==0.7.3
 torchtext==0.12.0
     # via -r requirements.in
 torchvision==0.12.0+cu113
-    # via -r requirements.in
+    # via
+    #   -r requirements.in
+    #   timm
 tornado==6.1
     # via
     #   ipykernel
