testing small visual bert with od

--- a/.github/workflows/train.yml
+++ b/.github/workflows/train.yml
@@ -49,6 +49,12 @@ jobs:
         continue-on-error: true
         run: dvc pull -a --run-cache
 
+      - name: Train VisualBERT with OD
+      #   # continue-on-error: true
+        run: |
+          dvc repro visual_bert_with_od
+          dvc push --run-cache -d visual_bert_with_od
+
       - name: Train Electra
         # continue-on-error: true
         run: |
@@ -78,12 +84,6 @@ jobs:
         run: |
           dvc repro simple_text
           dvc push --run-cache -d simple_text
-
-      # - name: Train VisualBERT with OD
-      #   # continue-on-error: true
-      #   run: |
-      #     dvc repro visual_bert_with_od
-      #     dvc push --run-cache -d visual_bert_with_od
 
       - name: Train VisualBERT
         # continue-on-error: true
