Adding other visual bert with od.

--- a/.github/workflows/train.yml
+++ b/.github/workflows/train.yml
@@ -92,7 +92,7 @@ jobs:
           dvc push --run-cache -d simple_text
 
       - name: Train VisualBERT
-        # continue-on-error: true
+        continue-on-error: true
         run: |
           dvc repro visual_bert
           dvc push --run-cache -d visual_bert
@@ -108,6 +108,12 @@ jobs:
         run: |
           dvc repro --pull beit
           dvc push -d beit
+
+      - name: Train VisualBERT with od
+        continue-on-error: true
+        run: |
+          dvc repro visual_bert_with_od
+          dvc push --run-cache -d visual_bert_with_od
 
       - name: Train Super Model
         continue-on-error: true
