--- a/requirements.txt
+++ b/requirements.txt
@@ -581,8 +581,10 @@ torch-tb-profiler==0.4.0
     # via -r requirements.in
 torchaudio==0.11.0+cu113
     # via -r requirements.in
-torchmetrics==0.7.3
-    # via pytorch-lightning
+torchmetrics==0.8.0
+    # via
+    #   -r requirements.in
+    #   pytorch-lightning
 torchtext==0.12.0
     # via -r requirements.in
 torchvision==0.12.0+cu113
