--- a/dvc.yaml
+++ b/dvc.yaml
@@ -328,8 +328,8 @@ stages:
   test_super_model:
     cmd: >
         python -m hateful_memes.models.super_model
-        --simple_image_chkpt data/06_models/simple_image
-        --simple_text_chkpt data/06_models/simple_text
+        --simple_image_ckpt data/06_models/simple_image
+        --simple_text_ckpt data/06_models/simple_text
         --fast_dev_run True
         && echo "PASSED" > logs/test_super_model.log
     deps:
@@ -346,12 +346,14 @@ stages:
       - config/super_model.yaml
     cmd: >
         python -m hateful_memes.models.super_model
-        --simple_image_chkpt data/06_models/simple_image
-        --simple_mlp_image_chkpt data/06_models/simple_mlp_image
-        --simple_text_chkpt data/06_models/simple_text
-        --visual_bert_chkpt data/06_models/visual_bert
-        --vit_chkpt data/06_models/vit
-        --beit_chkpt data/06_models/beit
+        --simple_image_ckpt data/06_models/simple_image
+        --simple_mlp_image_ckpt data/06_models/simple_mlp_image
+        --simple_text_ckpt data/06_models/simple_text
+        --visual_bert_ckpt data/06_models/visual_bert
+        --vit_ckpt data/06_models/vit
+        --beit_ckpt data/06_models/beit
+        --electra_ckpt data/06_models/electra
+        --distilbert_ckpt data/06_models/distilbert
         --batch_size ${batch_size}
         --lr ${lr}
         --num_dense_layers ${num_layers}
@@ -370,5 +372,7 @@ stages:
       - data/06_models/visual_bert
       - data/06_models/vit
       - data/06_models/beit
+      - data/06_models/electra
+      - data/06_models/distilbert
     outs:
       - data/06_models/super_model
