Adding dataset dependency.

--- a/dvc.yaml
+++ b/dvc.yaml
@@ -28,6 +28,7 @@ stages:
     deps:
       - logs/test_visual_bert_with_od.log
       - data/01_raw/hateful_memes
+      - hateful_memes/data/hateful_memes.py
       - hateful_memes/models/base.py
       - hateful_memes/models/visual_bert_with_od.py
     outs:
@@ -42,6 +43,7 @@ stages:
         && echo "PASSED" > logs/test_beit.log
     deps:
       - data/01_raw/hateful_memes
+      - hateful_memes/data/hateful_memes.py
       - hateful_memes/models/baseIT.py
     outs:
       - logs/test_beit.log
@@ -63,6 +65,7 @@ stages:
     deps:
       - logs/test_beit.log
       - data/01_raw/hateful_memes
+      - hateful_memes/data/hateful_memes.py
       - hateful_memes/models/baseIT.py
     outs:
       - data/06_models/beit
@@ -78,6 +81,7 @@ stages:
         && echo "PASSED" > logs/test_vit.log
     deps:
       - data/01_raw/hateful_memes
+      - hateful_memes/data/hateful_memes.py
       - hateful_memes/models/baseIT.py
     outs:
       - logs/test_vit.log
@@ -99,6 +103,7 @@ stages:
     deps:
       - logs/test_vit.log
       - data/01_raw/hateful_memes
+      - hateful_memes/data/hateful_memes.py
       - hateful_memes/models/baseIT.py
     outs:
       - data/06_models/vit
@@ -113,6 +118,7 @@ stages:
         && echo "PASSED" > logs/test_visual_bert.log 
     deps:
       - data/01_raw/hateful_memes
+      - hateful_memes/data/hateful_memes.py
       - hateful_memes/models/base.py
       - hateful_memes/models/visual_bert.py
     outs:
@@ -135,6 +141,7 @@ stages:
     deps:
       - logs/test_visual_bert.log
       - data/01_raw/hateful_memes
+      - hateful_memes/data/hateful_memes.py
       - hateful_memes/models/base.py
       - hateful_memes/models/visual_bert.py
     outs:
@@ -151,6 +158,7 @@ stages:
         && echo "PASSED" > logs/test_electra.log 
     deps:
       - data/01_raw/hateful_memes
+      - hateful_memes/data/hateful_memes.py
       - hateful_memes/models/auto_text_model.py
     outs:
       - logs/test_electra.log
@@ -173,6 +181,7 @@ stages:
     deps:
       - logs/test_electra.log
       - data/01_raw/hateful_memes
+      - hateful_memes/data/hateful_memes.py
       - hateful_memes/models/auto_text_model.py
     outs:
       - data/06_models/electra
@@ -188,6 +197,7 @@ stages:
         && echo "PASSED" > logs/test_distilbert.log 
     deps:
       - data/01_raw/hateful_memes
+      - hateful_memes/data/hateful_memes.py
       - hateful_memes/models/auto_text_model.py
     outs:
       - logs/test_distilbert.log
@@ -210,6 +220,7 @@ stages:
     deps:
       - logs/test_distilbert.log
       - data/01_raw/hateful_memes
+      - hateful_memes/data/hateful_memes.py
       - hateful_memes/models/auto_text_model.py
     outs:
       - data/06_models/distilbert
@@ -223,6 +234,7 @@ stages:
         && echo "PASSED" > logs/test_simple_mlp_image.log 
     deps:
       - data/01_raw/hateful_memes
+      - hateful_memes/data/hateful_memes.py
       - hateful_memes/models/base.py
       - hateful_memes/models/simple_mlp_image.py
     outs:
@@ -243,6 +255,7 @@ stages:
     deps:
       - logs/test_simple_mlp_image.log
       - data/01_raw/hateful_memes
+      - hateful_memes/data/hateful_memes.py
       - hateful_memes/models/base.py
       - hateful_memes/models/simple_mlp_image.py
     outs:
@@ -257,6 +270,7 @@ stages:
         && echo "PASSED" > logs/test_simple_image.log
     deps:
       - data/01_raw/hateful_memes
+      - hateful_memes/data/hateful_memes.py
       - hateful_memes/models/base.py
       - hateful_memes/models/simple_image.py
     outs:
@@ -278,6 +292,7 @@ stages:
     deps:
       - logs/test_simple_image.log
       - data/01_raw/hateful_memes
+      - hateful_memes/data/hateful_memes.py
       - hateful_memes/models/simple_image.py
       - hateful_memes/models/base.py
     outs:
@@ -287,6 +302,7 @@ stages:
     cmd: python -m hateful_memes.models.baseline_algorithm
     deps:
       - data/01_raw/hateful_memes
+      - hateful_memes/data/hateful_memes.py
       - hateful_memes/models/baseline_algorithm.py
 
   test_simple_text:
@@ -296,6 +312,7 @@ stages:
         && echo "PASSED" > logs/test_simple_text.log
     deps:
       - data/01_raw/hateful_memes
+      - hateful_memes/data/hateful_memes.py
       - hateful_memes/models/base.py
       - hateful_memes/models/simple_text.py
     outs:
@@ -319,6 +336,7 @@ stages:
         --model_dir data/06_models/simple_text
     deps:
       - data/01_raw/hateful_memes
+      - hateful_memes/data/hateful_memes.py
       - logs/test_simple_text.log
       - hateful_memes/models/base.py
       - hateful_memes/models/simple_text.py
@@ -334,6 +352,7 @@ stages:
         && echo "PASSED" > logs/test_super_model.log
     deps:
       - data/01_raw/hateful_memes
+      - hateful_memes/data/hateful_memes.py
       - hateful_memes/models/base.py
       - hateful_memes/models/super_model.py
       - data/06_models/simple_image
@@ -363,6 +382,7 @@ stages:
         --model_dir data/06_models/super_model
     deps:
       - data/01_raw/hateful_memes
+      - hateful_memes/data/hateful_memes.py
       - logs/test_super_model.log
       - hateful_memes/models/base.py
       - hateful_memes/models/super_model.py
